--- a/solution.ipynb
+++ b/solution.ipynb
@@ -1,6 +1,57 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7bd08bb1-b2bf-4211-8acf-cec45ff230fc",
+   "metadata": {},
+   "source": [
+    "Now it is your turn: can you help us find the best combustible?\n",
+    "We have saved some consumption data in a .csv, but… it would be very nice if you could add some more data. You can find data in the repo :-)\n",
+    "\n",
+    "Show us your abilities and make yourself worth the amount of money you'd like to get paid. You have **3 hours** to turn the challenge in starting right now! 💸\n",
+    "\n",
+    "## What to do?\n",
+    "\n",
+    "### You should aim for:\n",
+    "\n",
+    "#### Exploratory data analysis\n",
+    "\n",
+    "- Get to know the domain\n",
+    "- Explore your data\n",
+    "- Clean your data\n",
+    "- Take a look and find connections between data\n",
+    "\n",
+    "<i> Note: Above you have your data set in a folder but for further reference here is the data set source: https://www.kaggle.com/datasets/anderas/car-consume <i/>\n",
+    "\n",
+    "#### Visualization\n",
+    "\n",
+    "- Plot your data in a meaningful way\n",
+    "\n",
+    "#### Predictions\n",
+    "\n",
+    "- Do you have any hypothesis?\n",
+    "- Can you make any kind of prediction: regression and/or classification?\n",
+    "\n",
+    "#### Storytelling\n",
+    "\n",
+    "- What metrics are you obtaining?\n",
+    "- Explain your conclusions\n",
+    "- Shape your new data and conclusions in such a way that is appealing to the listener and tells a story\n",
+    "\n",
+    "\n",
+    "### Extra:\n",
+    "#### Enrich your dataset\n",
+    "\n",
+    "- Add value: obtain related data by web scraping or with APIs.\n",
+    "\n",
+    "#### Database\n",
+    "\n",
+    "- Load the processed information into a database\n",
+    "\n",
+    "<br>\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "id": "76597f49-93cf-4b2d-9acd-8a9c0370c6a2",
@@ -12,6 +63,16 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "ef7e1c47-c636-4ef6-a5b6-e2ac6fdbbe09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We need to find out whether the fuel type impacts consumption"
    ]
   },
   {
